test/scc/expr/semantic-errors/156.a
156.t:12:10: error: undeclared identifier 's'